static/cartoview_feature_list/src/css/view.css
.element-flex {
    display: flex;
    flex-grow: 1
}
.row {
    display: flex;
    flex: 1;
    flex-direction: column
}

.list-item {
    max-height: 115px;
}

.list-item-text {
    display: flex;
    flex: 1;
    position: relative;
    flex-direction: column;
}

.text-center {
    text-align: center
}

.big-avatar {
    width: 115px;
    margin-right: 10px;
    height: auto;
}

.list-header {
    padding: 10px
}

.space-per-line {
    white-space: pre-line
}

.attrs-table-title {
    align-items: center;
    display: flex;
    justify-content: center
}

.fill-out-empty {
    flex-grow: 1
}

.map-panel {
    height: 100%
}

.paper {
    height: 100%;
    overflow-y: overlay
}

.comment-list {
    max-height: 250px;
    overflow-y: overlay
}

.avatar {
    margin: 10px
}

.center-div {
    margin-right: auto;
    margin-left: auto
}

.menu-button {
    margin-left: auto;
    margin-right: auto;
    height: auto !important;
}

.img-responsive {
    height: auto;
    width: 100%
}

.search-paper {
    padding: 5px;
    display: flex
}

.nav-toolbar {
    padding-left: 16px !important;
    padding-right: 16px !important;
}

.ol-zoom {
    bottom: 3em;
    right: .5em;
    top: auto;
    left: auto;
}

.drawer-button-container {
    background-color: #f7f6f6bf;
    position: absolute !important;
    z-index: 0;
    top: 8px;
    left: 100%;
}

.drawer-button {
    width: auto !important;
    z-index: 123123123
}

/* .layer-switcher {
    position: absolute;
    top: .5em !important;
    left: auto !important;
    right: .5em !important;
    text-align: left;
} */

.layer-switcher.shown.ol-control {
    background-color: transparent !important;
}


.ol-control button {
    display: block;
    margin: 1px;
    padding: 0;
    color: #3a3a3a !important;
    font-size: 1.14em;
    font-weight: 700;
    text-decoration: none;
    text-align: center;
    height: 1.375em;
    width: 1.375em;
    line-height: .4em;
    background-color: rgb(255, 255, 255) !important;
    border: none;
    border-radius: 2px;
}
.ol-zoom.ol-control button {
    color: #3a3a3a !important;
}
.nav-drawer-close{
    padding: 10px
}
.ol-control {
    position: absolute;
    background-color: rgba(51, 51, 51, 0.58) !important;
    border-radius: 4px;
    padding: 2px;
}

.ol-attribution button {
    display: unset;
}
.ol-control {
    position: absolute;
    background-color: rgba(51, 51, 51, 0.58) !important;
    border-radius: 4px;
    padding: 2px;
}

.ol-attribution button {
    display: unset;
}

.ol-rotate {
    top: auto !important;
    bottom: 10.5em !important;
    right: .5em;
    transition: opacity .25s linear, visibility 0s linear;
}

.ol-full-screen {
    right: .5em !important;
    top: auto !important;
    bottom: 8em;
}

@media screen and (max-width: 1024px) {
    .big-avatar {
        width: 85px
    }
    .list-item {
        max-height: 85px;
    }
}

